<?xml version="1.0"?>
<package>
  <name>yumi_control</name>
  <version>0.0.4</version>
  <description>The yumi_control package</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <author email="yoshua.nava@kth.se">Yoshua Nava</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>gazebo_mimic</run_depend> <!-- needed for the gazebo mimic plugin -->

  <export>
  </export>

</package>
